# tardigrade

./: Cargo.toml  README.md
compute_testing/: Cargo.toml
compute_testing/src/: main.rs  min.glsl  min.rs
example/: Cargo.toml
example/src/: main.rs
hatchery/: Cargo.toml
hatchery/src/: engine.rs  lib.rs  performance.rs  render_pass.rs
hatchery/src/gui/: egui.rs  mod.rs
hatchery/src/gui/egui_widgets/: fat_button.rs  mod.rs
hatchery/src/util/: buffer.rs  compute.rs  mod.rs  point_cloud.rs  point_cloud_frag.glsl  point_cloud_vert.glsl  quad.rs
hatchery/src/util/compute/: mod.rs
hatchery/src/util/mesh/: mod.rs  quad.rs
newtonian_nbody/: Cargo.toml
newtonian_nbody/src/: distributions.rs  main.rs
newtonian_nbody/src/physics/: energy.glsl  energy.rs  mod.rs  verlet.glsl  verlet.rs
notes/: notes.aux  notes.fdb_latexmk  notes.fls  notes.tex
sph2d/: Cargo.toml
sph2d/src/: main.rs
tardigrade/: Cargo.toml
tardigrade/src/: main.rs  simulation.glsl  simulation.rs
tardigrade/src/cloud/: frag.glsl  mod.rs  pipeline.rs  quad.rs  vert.glsl
tardigrade/src/graphics/: mod.rs  part_f.glsl  part_v.glsl  particles.rs  renderer.rs  view.rs
tardigrade/src/physics/: bh_simulation.glsl  bh_simulation.rs  mod.rs  simulation.glsl  simulation.rs  standard_simulation.glsl  standard_simulation.rs
tardigrade_launcher/: Cargo.toml
tardigrade_launcher/src/: engine.rs  lib.rs  render_pass.rs
tardigrade_launcher/src/gui/: egui_implementation.rs  mod.rs
tardigrade_v2/: Cargo.toml
tardigrade_v2/src/: main.rs
tardigrade_v2/src/physics/: mod.rs  verlet.glsl  verlet.rs
