[workspace]
resolver = "2"
members = [
    "newtonian_nbody",
    "hatchery", "example",
    # "sph2d",
    # "tardigrade",
]

[workspace.dependencies]
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
vulkano = "0.32"
vulkano-util = "0.32"
vulkano-win = "0.32"
vulkano-shaders = "0.32"
cgmath = "0.18.0"

[profile.release]
# lto = "fat"
incremental = true
