[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
description = "Simple wrapper engine library for making graphical Vulkano apps with ui."

[dependencies]
# Gui
egui = { version = "0.19", optional = true }
egui_winit_vulkano = { version = "0.21", optional = true }

winit = "0.27.5"

# Vulkano dependencies
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"], workspace = true }
vulkano = { version = "0.32", workspace = true }
vulkano-util = { version = "0.32", workspace = true }
vulkano-win = { version = "0.32", workspace = true }
vulkano-shaders = { version = "0.32", workspace = true }

# Utils
systemstat = "0.1.11"
lazy_static = "1.4"
rand = "0.8"

[features]
egui = ["dep:egui", "dep:egui_winit_vulkano"]
default = ["egui"]
