[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
description = "Simple wrapper engine library for making graphical Vulkano apps with ui."

[dependencies]
# Gui
egui = { version = "0.19", optional = true }
egui_winit_vulkano = { version = "0.21", optional = true }
cgmath = { workspace = true }
winit = "0.27.5"

# Vulkano dependencies
bytemuck = { workspace = true }
vulkano = { workspace = true }
vulkano-util = { workspace = true }
vulkano-win = { workspace = true }
vulkano-shaders = { workspace = true }

# Utils
systemstat = "0.1.11"
lazy_static = "1.4"
rand = "0.8"

[features]
egui = ["dep:egui", "dep:egui_winit_vulkano"]
default = ["egui"]
