[package]
name = "newtonian_nbody"
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]

[dependencies]
hatchery = { path = "../hatchery", features = ["egui"] }
rand = "0.8.5"
rand_distr = "0.4.3"

cgmath = { workspace = true }
bytemuck = { workspace = true }
vulkano = { workspace = true }
vulkano-util = { workspace = true }
vulkano-win = { workspace = true }
vulkano-shaders = { workspace = true }
